dynamically choose bearer or cookie auth on a per route basis, added AuthenticationStore for reusing authenticators
